--- a/templates/apps/info.html
+++ b/templates/apps/info.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
               <th>住所</th>
-              <td>{{view_list.address}}</td>
+              <td>〒{{view_list.address_number}}</br>{{view_list.address}}</td>
           </tr>
           <tr>
               <th>家賃</th>
