--- a/templates/company/create_form.html
+++ b/templates/company/create_form.html
@@ -1,7 +1,7 @@
 {% extends "apps/base.html" %}
 {% block content %}
 <div class='article'>
-  <div class='form contents'>
+  <div class='article_form'>
     <main id="profile_edit">
       <div class='logo'>
         <p class='logo text'>roomii <br/> 【物件登録】</p>
@@ -15,11 +15,14 @@
         </div>
         {{ form.non_field_errors }}
         {% for field in form %}
-        <div class="form-group">
-          <label for="{{ field.id_for_label }}">{{ field.label_tag }}</label>
-          {{ field }}
-          {{ field.errors }}
-        </div>
+        <table class="form-article">
+          <tbody>
+            <tr>
+              <th>{{ field.label_tag }}</th>
+              <td>{{ field }}</br>{{ field.errors }}</td>
+            </tr>
+          </tbody>
+        </table>
         {% endfor %}
         <div class='vacant'>
           <div class="calendar">
