--- a/templates/register/user_create_done.html
+++ b/templates/register/user_create_done.html
@@ -3,5 +3,6 @@
 <p class='commit_text_mail'>
     会員登録確認メールを送信しました。</br>まだ、会員登録は完了していません。<br>
     確認メールを送信しましたので、</br>確認メールに記載されているリンクから本登録を行ってください。
+    <a class="btn btn-primary btn-lg" href="{% url 'register:login' %}">ログイン</a>
 </p>
 {% endblock %}
